<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="ST_HMI_C1_Ctrl3_Maintenance_Timing_Analysis_1Ch" Id="c7984bff-84b2-437b-807a-416ba5e83e0f">
    <Declaration><![CDATA[TYPE ST_HMI_C1_Ctrl3_Maintenance_Timing_Analysis_1Ch : 
STRUCT
	//Maintenance Timing Analysis 1Ch
	bTrigReconfigure: BOOL;
	bM2_bIsOn: BOOL; //State
	tM2_fbTimeCurrentInterval: ST_ALY_TimeSpan; //Current Interval
	tM2_fbTimeOnTotal: ST_ALY_TimeSpan; //Total On
	tM2_fbTimeOffTotal: ST_ALY_TimeSpan; //Total Off
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>